# bs2

./: .gitignore  Cargo.toml  build.rs  readme.md
.cargo/: config_ci.toml
.github/workflows/: build.yml  ci.yml  installer.yml  release.yml
assets/: create_res.ps1  icon.rc  icon.res
crates/bs2/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/src/: main.rs  windows.rs
crates/manager/: Cargo.toml  build.rs
crates/manager/src/: config.rs  main.rs  projects.rs  setup.rs
crates/manager/template/game/core/: gameinfo.gi
crates/manager/template/game/core_addons/: readme.txt
crates/manager/ui/: app-window.slint  globals.slint  side_bar.slint
crates/manager/ui/pages/: about_page.slint  page.slint  pages.slint  projects_page.slint  setup_page.slint  utilities_page.slint
crates/resourcecompiler/: Cargo.toml
crates/resourcecompiler/src/: main.rs
docs/: setup.md
installer/: installer.iss
src/: main.rs
