[package]
name = "bs2"
version = "0.0.1"
edition = "2024"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
description = "Bevy <-> Source 2 Tools integration"
license = "MIT OR Apache-2.0"

[dependencies]
libloading = "0.9.0"
winapi = { version = "0.3", features = [
    "libloaderapi",
    "stringapiset",
    "processenv",
    "minwindef",
] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
