[package]
name = "bs2_launcher"
description = "Bevy <-> Source 2 Tools integration"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
publish = false

[target.'cfg(windows)'.dependencies]
libloading = { workspace = true }
winapi = { workspace = true }
windows-sys = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
