[package]
name = "bs2_manager"
description = "Bevy <-> Source 2 Tools integration"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
slint = { workspace = true, features = ["raw-window-handle-06"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
